--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
-        <exec.mainClass>tech.ydb.samples.materializer.App</exec.mainClass>
+        <exec.mainClass>tech.ydb.mv.App</exec.mainClass>
     </properties>
     <dependencies>
         <dependency>
