--- a/pom.xml
+++ b/pom.xml
@@ -158,6 +158,11 @@
                             </execution>
                         </executions>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <version>3.2.5</version>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
