--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>ydb-sdk-topic</artifactId>
         </dependency>
         <dependency>
+            <groupId>tech.ydb</groupId>
+            <artifactId>ydb-sdk-coordination</artifactId>
+        </dependency>
+        <dependency>
             <groupId>tech.ydb.auth</groupId>
             <artifactId>yc-auth-provider</artifactId>
             <type>jar</type>
