--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
             <dependency>
                 <groupId>tech.ydb</groupId>
                 <artifactId>ydb-sdk-bom</artifactId>
-                <version>2.3.17</version>
+                <version>2.3.20</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -182,7 +182,7 @@
                                 <TESTCONTAINERS_REUSE_ENABLE>true</TESTCONTAINERS_REUSE_ENABLE>
                                 <YDB_ANONYMOUS_CREDENTIALS>1</YDB_ANONYMOUS_CREDENTIALS>
                                 <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
-                                <YDB_DOCKER_IMAGE>ydbplatform/local-ydb:25.1.3</YDB_DOCKER_IMAGE>
+                                <YDB_DOCKER_IMAGE>ydbplatform/local-ydb:latest</YDB_DOCKER_IMAGE>
                             </environmentVariables>
                         </configuration>
                     </plugin>
