--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>tech.ydb.apps</groupId>
     <artifactId>ydb-materializer</artifactId>
-    <version>1.6</version>
+    <version>1.7-SNAPSHOT</version>
     <name>YDB Materializer</name>
     <packaging>jar</packaging>
     <build>
