--- a/pom.xml
+++ b/pom.xml
@@ -198,6 +198,14 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.11.2</version>
+                        <configuration>
+                            <!--
+                              The codebase contains many public/internal model POJOs where
+                              documenting every getter/setter is not practical. Suppress
+                              "missing" DocLint category while keeping the other checks.
+                            -->
+                            <doclint>all,-missing</doclint>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
