--- a/pom.xml
+++ b/pom.xml
@@ -42,14 +42,20 @@
     </licenses>
     <developers>
         <developer>
-            <name>Maxim Zinal</name>
-            <email>alexandr268@ydb.tech</email>
+            <name>Kirill Kurdyukov</name>
+            <email>kurdyukov-kir@ydb.tech</email>
             <organization>YDB</organization>
             <organizationUrl>https://ydb.tech/</organizationUrl>
         </developer>
         <developer>
-            <name>Kirill Kurdyukov</name>
-            <email>kurdyukov-kir@ydb.tech</email>
+            <name>Maxim Zinal</name>
+            <email>zinal@ydb.tech</email>
+            <organization>YDB</organization>
+            <organizationUrl>https://ydb.tech/</organizationUrl>
+        </developer>
+        <developer>
+            <name>Aleksandr Gorshenin</name>
+            <email>alexandr268@ydb.tech</email>
             <organization>YDB</organization>
             <organizationUrl>https://ydb.tech/</organizationUrl>
         </developer>
@@ -63,12 +69,12 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.24.2</version>
+            <version>2.25.3</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.24.2</version>
+            <version>2.25.3</version>
         </dependency>
         <dependency>
             <groupId>tech.ydb</groupId>
@@ -99,13 +105,13 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.13.4</version>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.13.4</version>
+            <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -124,7 +130,7 @@
             <dependency>
                 <groupId>tech.ydb</groupId>
                 <artifactId>ydb-sdk-bom</artifactId>
-                <version>2.3.22</version>
+                <version>2.3.29</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -192,6 +198,14 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
                         <version>3.11.2</version>
+                        <configuration>
+                            <!--
+                              The codebase contains many public/internal model POJOs where
+                              documenting every getter/setter is not practical. Suppress
+                              "missing" DocLint category while keeping the other checks.
+                            -->
+                            <doclint>all,-missing</doclint>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>attach-javadocs</id>
