--- a/pom.xml
+++ b/pom.xml
@@ -126,13 +126,13 @@
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient</artifactId>
-            <version>0.16.0</version>
+            <artifactId>prometheus-metrics-core</artifactId>
+            <version>1.4.3</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
-            <artifactId>simpleclient_httpserver</artifactId>
-            <version>0.16.0</version>
+            <artifactId>prometheus-metrics-exporter-httpserver</artifactId>
+            <version>1.4.3</version>
         </dependency>
         <dependency>
             <groupId>io.prometheus</groupId>
